// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Snapshot: Nav matches snapshot on home page 1`] = `
<nav
  class="bg-white border-b border-gray-200 sticky top-0 z-50"
>
  <div
    class="max-w-7xl mx-auto px-4"
  >
    <div
      class="flex items-center justify-between h-14"
    >
      <a
        class="font-bold text-lg text-blue-600 shrink-0"
        href="/"
      >
        XC-RO
      </a>
      <div
        class="hidden md:flex items-center gap-1"
      >
        <a
          class="px-3 py-2 rounded text-sm font-medium transition-colors bg-blue-50 text-blue-700"
          href="/"
        >
          Home
        </a>
        <a
          class="px-3 py-2 rounded text-sm font-medium transition-colors text-gray-600 hover:text-gray-900 hover:bg-gray-50"
          href="/takeoffs"
        >
          Takeoffs
        </a>
        <a
          class="px-3 py-2 rounded text-sm font-medium transition-colors text-gray-600 hover:text-gray-900 hover:bg-gray-50"
          href="/pilots"
        >
          Pilots
        </a>
        <a
          class="px-3 py-2 rounded text-sm font-medium transition-colors text-gray-600 hover:text-gray-900 hover:bg-gray-50"
          href="/flights"
        >
          Flights
        </a>
        <a
          class="px-3 py-2 rounded text-sm font-medium transition-colors text-gray-600 hover:text-gray-900 hover:bg-gray-50"
          href="/records"
        >
          Records
        </a>
        <div
          class="ml-2"
        >
          <button
            data-testid="lang-toggle"
          >
            EN
          </button>
        </div>
      </div>
      <div
        class="flex items-center gap-2 md:hidden"
      >
        <button
          data-testid="lang-toggle"
        >
          EN
        </button>
        <button
          aria-label="Menu"
          class="p-2 rounded text-gray-600 hover:bg-gray-100"
        >
          <svg
            class="w-6 h-6"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M4 6h16M4 12h16M4 18h16"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</nav>
`;

exports[`Snapshot: SeasonHeatmap matches snapshot with data 1`] = `
<div>
  <div
    class="flex items-center justify-between mb-3"
  >
    <h3
      class="font-semibold text-gray-900"
    >
      Season
    </h3>
    <div
      class="flex gap-1"
    >
      <button
        class="px-2 py-1 text-xs rounded bg-blue-100 text-blue-700"
      >
        Flight Count
      </button>
      <button
        class="px-2 py-1 text-xs rounded bg-gray-100 text-gray-600"
      >
        Avg Score
      </button>
    </div>
  </div>
  <div
    class="overflow-x-auto"
  >
    <div
      class="inline-block min-w-full"
    >
      <div
        class="flex gap-0.5 mb-1 ml-12"
      >
        <div
          class="w-8 text-center text-xs text-gray-500"
        >
          I
        </div>
        <div
          class="w-8 text-center text-xs text-gray-500"
        >
          II
        </div>
        <div
          class="w-8 text-center text-xs text-gray-500"
        >
          III
        </div>
        <div
          class="w-8 text-center text-xs text-gray-500"
        >
          IV
        </div>
        <div
          class="w-8 text-center text-xs text-gray-500"
        >
          V
        </div>
        <div
          class="w-8 text-center text-xs text-gray-500"
        >
          VI
        </div>
        <div
          class="w-8 text-center text-xs text-gray-500"
        >
          VII
        </div>
        <div
          class="w-8 text-center text-xs text-gray-500"
        >
          VIII
        </div>
        <div
          class="w-8 text-center text-xs text-gray-500"
        >
          IX
        </div>
        <div
          class="w-8 text-center text-xs text-gray-500"
        >
          X
        </div>
        <div
          class="w-8 text-center text-xs text-gray-500"
        >
          XI
        </div>
        <div
          class="w-8 text-center text-xs text-gray-500"
        >
          XII
        </div>
      </div>
      <div
        class="flex gap-0.5 items-center"
      >
        <div
          class="w-12 text-xs text-gray-500 text-right pr-2"
        >
          2023
        </div>
        <div
          class="w-8 h-6 rounded-sm cursor-default"
          style="background-color: rgb(219, 234, 254);"
          title="2023/01: 10 flights"
        />
        <div
          class="w-8 h-6 rounded-sm cursor-default"
          style="background-color: rgb(243, 244, 246);"
          title="2023/02: 0 flights"
        />
        <div
          class="w-8 h-6 rounded-sm cursor-default"
          style="background-color: rgb(243, 244, 246);"
          title="2023/03: 0 flights"
        />
        <div
          class="w-8 h-6 rounded-sm cursor-default"
          style="background-color: rgb(243, 244, 246);"
          title="2023/04: 0 flights"
        />
        <div
          class="w-8 h-6 rounded-sm cursor-default"
          style="background-color: rgb(243, 244, 246);"
          title="2023/05: 0 flights"
        />
        <div
          class="w-8 h-6 rounded-sm cursor-default"
          style="background-color: rgb(59, 130, 246);"
          title="2023/06: 80 flights"
        />
        <div
          class="w-8 h-6 rounded-sm cursor-default"
          style="background-color: rgb(29, 78, 216);"
          title="2023/07: 120 flights"
        />
        <div
          class="w-8 h-6 rounded-sm cursor-default"
          style="background-color: rgb(243, 244, 246);"
          title="2023/08: 0 flights"
        />
        <div
          class="w-8 h-6 rounded-sm cursor-default"
          style="background-color: rgb(243, 244, 246);"
          title="2023/09: 0 flights"
        />
        <div
          class="w-8 h-6 rounded-sm cursor-default"
          style="background-color: rgb(243, 244, 246);"
          title="2023/10: 0 flights"
        />
        <div
          class="w-8 h-6 rounded-sm cursor-default"
          style="background-color: rgb(243, 244, 246);"
          title="2023/11: 0 flights"
        />
        <div
          class="w-8 h-6 rounded-sm cursor-default"
          style="background-color: rgb(243, 244, 246);"
          title="2023/12: 0 flights"
        />
      </div>
      <div
        class="flex gap-0.5 items-center"
      >
        <div
          class="w-12 text-xs text-gray-500 text-right pr-2"
        >
          2024
        </div>
        <div
          class="w-8 h-6 rounded-sm cursor-default"
          style="background-color: rgb(243, 244, 246);"
          title="2024/01: 0 flights"
        />
        <div
          class="w-8 h-6 rounded-sm cursor-default"
          style="background-color: rgb(243, 244, 246);"
          title="2024/02: 0 flights"
        />
        <div
          class="w-8 h-6 rounded-sm cursor-default"
          style="background-color: rgb(147, 197, 253);"
          title="2024/03: 30 flights"
        />
        <div
          class="w-8 h-6 rounded-sm cursor-default"
          style="background-color: rgb(243, 244, 246);"
          title="2024/04: 0 flights"
        />
        <div
          class="w-8 h-6 rounded-sm cursor-default"
          style="background-color: rgb(243, 244, 246);"
          title="2024/05: 0 flights"
        />
        <div
          class="w-8 h-6 rounded-sm cursor-default"
          style="background-color: rgb(243, 244, 246);"
          title="2024/06: 0 flights"
        />
        <div
          class="w-8 h-6 rounded-sm cursor-default"
          style="background-color: rgb(29, 78, 216);"
          title="2024/07: 100 flights"
        />
        <div
          class="w-8 h-6 rounded-sm cursor-default"
          style="background-color: rgb(243, 244, 246);"
          title="2024/08: 0 flights"
        />
        <div
          class="w-8 h-6 rounded-sm cursor-default"
          style="background-color: rgb(243, 244, 246);"
          title="2024/09: 0 flights"
        />
        <div
          class="w-8 h-6 rounded-sm cursor-default"
          style="background-color: rgb(243, 244, 246);"
          title="2024/10: 0 flights"
        />
        <div
          class="w-8 h-6 rounded-sm cursor-default"
          style="background-color: rgb(243, 244, 246);"
          title="2024/11: 0 flights"
        />
        <div
          class="w-8 h-6 rounded-sm cursor-default"
          style="background-color: rgb(243, 244, 246);"
          title="2024/12: 0 flights"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshot: SeasonHeatmap matches snapshot with empty data 1`] = `
<div>
  <div
    class="flex items-center justify-between mb-3"
  >
    <h3
      class="font-semibold text-gray-900"
    >
      Season
    </h3>
    <div
      class="flex gap-1"
    >
      <button
        class="px-2 py-1 text-xs rounded bg-blue-100 text-blue-700"
      >
        Flight Count
      </button>
      <button
        class="px-2 py-1 text-xs rounded bg-gray-100 text-gray-600"
      >
        Avg Score
      </button>
    </div>
  </div>
  <div
    class="overflow-x-auto"
  >
    <div
      class="inline-block min-w-full"
    >
      <div
        class="flex gap-0.5 mb-1 ml-12"
      >
        <div
          class="w-8 text-center text-xs text-gray-500"
        >
          I
        </div>
        <div
          class="w-8 text-center text-xs text-gray-500"
        >
          II
        </div>
        <div
          class="w-8 text-center text-xs text-gray-500"
        >
          III
        </div>
        <div
          class="w-8 text-center text-xs text-gray-500"
        >
          IV
        </div>
        <div
          class="w-8 text-center text-xs text-gray-500"
        >
          V
        </div>
        <div
          class="w-8 text-center text-xs text-gray-500"
        >
          VI
        </div>
        <div
          class="w-8 text-center text-xs text-gray-500"
        >
          VII
        </div>
        <div
          class="w-8 text-center text-xs text-gray-500"
        >
          VIII
        </div>
        <div
          class="w-8 text-center text-xs text-gray-500"
        >
          IX
        </div>
        <div
          class="w-8 text-center text-xs text-gray-500"
        >
          X
        </div>
        <div
          class="w-8 text-center text-xs text-gray-500"
        >
          XI
        </div>
        <div
          class="w-8 text-center text-xs text-gray-500"
        >
          XII
        </div>
      </div>
    </div>
  </div>
</div>
`;
